--- a/git-replication-mvp/package.json
+++ b/git-replication-mvp/package.json
@@ -10,21 +10,27 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
-  "keywords": ["git", "replication", "distributed"],
+  "keywords": [
+    "git",
+    "replication",
+    "distributed"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
+    "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "express": "^4.18.2",
     "isomorphic-git": "^1.25.3",
-    "axios": "^1.6.5"
+    "uuid": "^9.0.1"
   }
 }
